# 6-grading-system

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: grading.yml
scripts/: fetch_submodule.sh  submit_solution.sh
